--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/intent_app_two_textView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/go_to_intent_app_1_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
